[package]
name = "af-anndata"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
description = "A library for converting alevin-fry output to the AnnData format"
homepage = "https://github.com/COMBINE-lab/af-anndata"
repository = "https://github.com/COMBINE-lab/af-anndata"
readme = "README.md"
keywords = ["anndata", "single-cell", "genomics"]
categories = ["science", "science::bioinformatics"]


[lib]
name = "af_anndata"
path = "src/lib.rs"

[dependencies]
anndata = "0.6.1"
anndata-hdf5 = "0.5.0"
anyhow = "1.0.96"
libsw = "3.4.0"
nalgebra-sparse = { version = "0.10.0", features = ["io"] }
polars = { version = "0.45.1", features = ["polars-io"] }
polars-io = { version = "0.45.1", features = ["csv", "json"] }
serde_json = "1.0.139"
tracing = "0.1.41"
